@@ -9,6 +9,9 @@ ktp-filetransfer-handler (15.04.3-1) UNRELEASED; urgency=medium
   * Update copyright file.
     - Remove po/* block
     - Add LGPL-2 license that was used.
+  * Use dhmk from pkg-kde-tools to build ktp.
+    - Change maintainer to debian-qt-kde
+    - Update debian/rules
 
  -- Diane Trout <diane@debian.org>  Wed, 27 May 2015 23:10:33 -0700
 
